# leoquad_vision_exam

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/imu_subscriber/: CMakeLists.txt  main.cpp
examples/leoquad_rpc_server/: CMakeLists.txt  main.cpp  onLocalGridmap.cpp  onLocalGridmap.h  onNotifySteppableArea.cpp  onNotifySteppableArea.h  onRequestOdometry.cpp  onRequestOdometry.h  onRobotCommand.cpp  onRobotCommand.h  onStreamOdometry.cpp  onStreamOdometry.h  onStreamSteppableArea.cpp  onStreamSteppableArea.h  onVisualOdom.cpp  onVisualOdom.h  quadRobot.h  robotData.h  rpcServer.cpp  rpcServer.h
examples/opstate_subscriber/: CMakeLists.txt  main.cpp
examples/vision_rpc_client/: CMakeLists.txt  config.h  dataTypes.h  emulGridmap.h  emulOdom.h  emulRobotCommand.h  emulSteppables.h  main.cpp  notifySteppableAreaCall.cpp  notifySteppableAreaCall.h  pubGridmap.cpp  pubGridmap.h  pubPerceivedObject.cpp  pubRobotCommand.cpp  pubVisualOdom.cpp  pubVisualOdom.h  requestOdometryCall.cpp  requestOdometryCall.h  rpcClient.cpp  rpcClient.h  rpcSubscriber.h  streamOdometryCall.cpp  streamOdometryCall.h  streamSteppableAreaCall.cpp  streamSteppableAreaCall.h
examples/vision_rpc_client/data/: stair_240215.yaml
include/dtCore/: dtCore  dtDAQ  dtLog  dtTrajectory  version.h.in
include/dtProto/: Service.grpc.pb.cc  Service.grpc.pb.h  Service.pb.cc  Service.pb.h  Service.proto  version.h  version.h.in
include/dtProto/geometry_msgs/: Displacement.grpc.pb.cc  Displacement.grpc.pb.h  Displacement.pb.cc  Displacement.pb.h  HTransform.grpc.pb.cc  HTransform.grpc.pb.h  HTransform.pb.cc  HTransform.pb.h  Matrix.grpc.pb.cc  Matrix.grpc.pb.h  Matrix.pb.cc  Matrix.pb.h  Orientation.grpc.pb.cc  Orientation.grpc.pb.h  Orientation.pb.cc  Orientation.pb.h  Point.grpc.pb.cc  Point.grpc.pb.h  Point.pb.cc  Point.pb.h  Polygon.grpc.pb.cc  Polygon.grpc.pb.h  Polygon.pb.cc  Polygon.pb.h  Pose.grpc.pb.cc  Pose.grpc.pb.h  Pose.pb.cc  Pose.pb.h  Pose.proto  Twist.grpc.pb.cc  Twist.grpc.pb.h  Twist.pb.cc  Twist.pb.h  Vector.grpc.pb.cc  Vector.grpc.pb.h  Vector.pb.cc  Vector.pb.h  Vector.proto  Wrench.grpc.pb.cc  Wrench.grpc.pb.h  (+2 more)
include/dtProto/nav_msgs/: Odom.grpc.pb.cc  Odom.grpc.pb.h  Odom.pb.cc  Odom.pb.h  SteppableArea.grpc.pb.cc  SteppableArea.grpc.pb.h  SteppableArea.pb.cc  SteppableArea.pb.h  SteppableArea.proto
include/dtProto/robot_msgs/: ArbitraryState.grpc.pb.cc  ArbitraryState.grpc.pb.h  ArbitraryState.pb.cc  ArbitraryState.pb.h  ControlCmd.grpc.pb.cc  ControlCmd.grpc.pb.h  ControlCmd.pb.cc  ControlCmd.pb.h  ControlCmd.proto  JointControl.grpc.pb.cc  JointControl.grpc.pb.h  (+14 more)
proto/: BUILD  QuadrupedNav.grpc.pb.cc  QuadrupedNav.grpc.pb.h  QuadrupedNav.pb.cc  QuadrupedNav.pb.h  QuadrupedNav.proto
(+84 files in other folders)
